<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grid_pattern"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.ActivityCrash">

    <TextView
        android:id="@+id/rx_crash_tool"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="?colorPrimary"
        android:gravity="center"
        android:text="RxCrashTool"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/crash_error_activity_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/crash_logo" />

        <Button
            android:id="@+id/crash_error_activity_more_info_button"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crash_error_details"
            android:textColor="?colorPrimary" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/customactivityoncrash_activity_vertical_margin"
            android:gravity="center"
            android:text="@string/crash_error_occurred_explanation"
            android:textColor="#707070"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/crash_error_locate_more_info_button"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_round_black_tr_15dp"
            android:padding="10dp"
            android:text="@string/crash_error_file"
            android:textColor="?colorPrimary" />

    </LinearLayout>


    <Button
        android:id="@+id/crash_error_activity_restart_button"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/customactivityoncrash_activity_vertical_margin"

        android:background="@drawable/shape_round_green_15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/crash_error_restart_app"
        android:textColor="#ffffff" />


    <Button
        android:id="@+id/crash_error_activity_close_button"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/customactivityoncrash_activity_vertical_margin"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_round_gray_15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/crash_error_close_app"
        android:textColor="#4B4B4B" />

</LinearLayout>